--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
 Jinja2==3.1.2
-mamba-ssm @ file:///home/ubuntu/mamba
+mamba-ssm 
 MarkupSafe==2.1.3
 mpmath==1.3.0
 multidict==6.0.4
